--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -71,8 +71,8 @@
   .empire img {
     width: 3.5rem;
     height: 5rem;
+  }
 }
-
 @media screen and (min-width: 1180px) and (max-width: 1300px) {
   .video-text {
     top: 35%;
