--- a/scss/main.css
+++ b/scss/main.css
@@ -206,6 +206,7 @@ a:focus {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    font-size: 7.5rem;
   }
   .left-side h1 {
     text-align: center;
@@ -215,31 +216,40 @@ a:focus {
   }
   .navbar a {
     font-size: 2.5rem;
-    padding-bottom: 0.5rem;
-    padding-top: 0.5rem;
+    padding-bottom: 0rem;
+    padding-top: 0rem;
   }
   .navbar {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
+    -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding-bottom: 2rem;
-    margin-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    margin-top: 0rem;
   }
   .empire {
-    width: 3.5rem;
-    height: 5rem;
+    width: 2.5rem;
+    height: 3.5rem;
     padding-top: 1rem;
   }
   .empire img {
-    width: 3.5rem;
-    height: 5rem;
+    width: 2.5rem;
+    height: 3.5rem;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .navbar a {
+    padding: 0rem;
+    font-size: 2rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
   }
 }
 
@@ -318,76 +328,18 @@ a:focus {
   -webkit-text-stroke-color: black;
 }
 
+@media screen and (min-width: 1180px) and (max-width: 1300px) {
+  .video-text {
+    top: 35%;
+  }
+}
+
 @media screen and (max-width: 1179px) {
   .video-text {
     font-size: 8rem;
   }
   .video-and-text {
-    margin-top: 40rem;
-  }
-  header {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  .left-side {
-    width: auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .left-side h1 {
-    text-align: center;
-    padding-left: 0rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0rem;
-  }
-  .right-side button {
-    font-size: 2.5rem;
-    padding-bottom: 0.5rem;
-    padding-top: 0.5rem;
-  }
-  .right-side {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding-bottom: 2rem;
-    margin-top: 0.25rem;
-  }
-  .empire {
-    width: 3.5rem;
-    height: 5rem;
-    padding-top: 1rem;
-  }
-  .empire img {
-    width: 3.5rem;
-    height: 5rem;
-  }
-}
-
-@media screen and (min-width: 1180px) and (max-width: 1300px) {
-  .video-text {
-    top: 35%;
+    margin-top: 15rem;
   }
 }
 
