no icon on mobile

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -161,4 +161,12 @@ a:focus {
   .navbar a {
     font-size: 1.5rem;
   }
+  .empire {
+    width: 0rem;
+    height: 0rem;
+  }
+  .empire img {
+    width: 0rem;
+    height: 0rem;
+  }
 }
