--- a/scss/main.css
+++ b/scss/main.css
@@ -257,6 +257,14 @@ a:focus {
   .navbar a {
     font-size: 1.5rem;
   }
+  .empire {
+    width: 0rem;
+    height: 0rem;
+  }
+  .empire img {
+    width: 0rem;
+    height: 0rem;
+  }
 }
 
 /*@mixin media-query-mobile {
