--- a/scss/main.css
+++ b/scss/main.css
@@ -357,6 +357,12 @@ a:focus {
   }
 }
 
+@media screen and (max-width: 1179px) {
+  .video-and-text {
+    margin-top: 12rem;
+  }
+}
+
 /* colors */
 /* font */
 /* media query - device sizes */
