delete logo on media
deleted logo on media queries

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -150,19 +150,23 @@ a:focus {
     padding-bottom: 0rem;
     padding-top: 0rem;
   }
+
   .navbar {
     @include flex-row-center;
     padding-bottom: 0.25rem;
     margin-top: 0rem;
   }
   .empire {
-    width: 2.5rem;
-    height: 3.5rem;
-    padding-top: 1rem;
+    width: 0rem;
+    height: 0rem;
+    padding-top: 0rem;
   }
   .empire img {
-    width: 2.5rem;
-    height: 3.5rem;
+    width: 0rem;
+    height: 0rem;
+  }
+  .empire img {
+    display: none;
   }
 }
 
@@ -172,6 +176,9 @@ a:focus {
     font-size: 2rem;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
+  }
+  .empire img {
+    display: none;
   }
 }
 
@@ -186,5 +193,8 @@ a:focus {
   .empire img {
     width: 0rem;
     height: 0rem;
+  }
+  .empire img {
+    display: none;
   }
 }
