--- a/scss/main.css
+++ b/scss/main.css
@@ -612,6 +612,225 @@ a:focus {
   }
 }
 
+/* colors */
+/* font */
+/* media query - device sizes */
+/*font*/
+/*@mixin media-query-mobile {
+  @media screen and (max-width: 480px);
+}
+
+@mixin media-query-tablet {
+  @media screen and (min-width: 481px) and (max-width: 769px);
+}
+
+@mixin media-query-laptop {
+  @media screen and (min-width: 769px) and (max-width: 1024px);
+}
+
+@mixin media-query-desktop {
+  @media screen and (min-width: 1025px) and (max-width: 1200px);*/
+.attractions-container {
+  padding-left: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #000000;
+  color: #fff;
+  border-top: 0.1rem #00ffdd solid;
+  width: 100%;
+  height: auto;
+  padding-bottom: 8rem;
+  padding-top: 12rem;
+}
+
+/* ATTRACTIONS LABEL */
+.attractions-label {
+  padding-left: 5rem;
+  padding-right: 5rem;
+  font-size: 9rem;
+  width: 20%;
+}
+
+/* IMAGES */
+.attractions-image-parent {
+  width: 60rem;
+  height: 40rem;
+  padding: 2rem 2rem 2rem 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.attractions-images {
+  margin: 3rem;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 45rem;
+  height: 38rem;
+  overflow: hidden;
+}
+
+.attractions-images img {
+  position: absolute;
+  -webkit-animation: attractions-images 28s infinite;
+          animation: attractions-images 28s infinite;
+  opacity: 0;
+  width: 100%;
+  height: auto;
+}
+
+@-webkit-keyframes attractions-images {
+  25% {
+    opacity: 1;
+  }
+  40% {
+    opacity: 0;
+  }
+}
+
+@keyframes attractions-images {
+  25% {
+    opacity: 1;
+  }
+  40% {
+    opacity: 0;
+  }
+}
+
+.attractions-images img:nth-child(7) {
+  -webkit-animation-delay: 24s;
+          animation-delay: 24s;
+}
+
+.attractions-images img:nth-child(6) {
+  -webkit-animation-delay: 20s;
+          animation-delay: 20s;
+}
+
+.attractions-images img:nth-child(5) {
+  -webkit-animation-delay: 16s;
+          animation-delay: 16s;
+}
+
+.attractions-images img:nth-child(4) {
+  -webkit-animation-delay: 12s;
+          animation-delay: 12s;
+}
+
+.attractions-images img:nth-child(3) {
+  -webkit-animation-delay: 8s;
+          animation-delay: 8s;
+}
+
+.attractions-images img:nth-child(2) {
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+}
+
+.attractions-images img:nth-child(1) {
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+
+/* TEXT ON RIGHT */
+.attractions-text {
+  width: 35%;
+}
+
+.attractions-text p {
+  font-family: "Noto Sans TC", sans-serif;
+  font-size: 2rem;
+  text-align: center;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  padding-right: 4rem;
+  padding-left: 4rem;
+}
+
+/* MEDIA QUERY CHANGES */
+@media screen and (min-width: 1400px) and (max-width: 2000px) {
+  .attractions-text {
+    padding-left: 10rem;
+  }
+  .attractions-label {
+    font-size: 10rem;
+  }
+  .attractions-text p {
+    font-size: 2.25rem;
+    padding-right: 0rem;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .attractions-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .attractions-label {
+    padding-top: 2rem;
+    width: auto;
+  }
+  .attractions-image-parent {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+  .attractions-images {
+    width: 40rem;
+    height: 35rem;
+  }
+  .attractions-text {
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 1rem;
+  }
+  .attractions-text p {
+    padding-right: 2rem;
+    padding-left: 2rem;
+    padding-top: 1rem;
+  }
+}
+
 html,
 body,
 * {
