--- a/scss/_attractions.scss
+++ b/scss/_attractions.scss
@@ -3,7 +3,7 @@
 
 .attractions-container {
   padding-left: 1rem;
-  @include flex-row-center;
+  @include flex-row-rev-center;
   background-color: $primary-color-dark;
   color: $primary-color-text;
   border-top: 0.1rem $accent-color-mix solid;
@@ -15,10 +15,10 @@
 
 /* ATTRACTIONS LABEL */
 .attractions-label {
-  padding-left: 5rem;
+  padding-left: 2rem;
   padding-right: 5rem;
   font-size: 9rem;
-  width: 20%;
+  width: 30%;
 }
 
 /* IMAGES */
@@ -26,6 +26,7 @@
   width: 60rem;
   height: 40rem;
   padding: 2rem 2rem 2rem 2rem;
+  padding-left: 0.5rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
   @include flex-row-center;
@@ -81,7 +82,7 @@
 
 /* TEXT ON RIGHT */
 .attractions-text {
-  width: 35%;
+  width: 33%;
 }
 
 .attractions-text p {
@@ -90,8 +91,8 @@
   text-align: center;
   padding-top: 3rem;
   padding-bottom: 3rem;
-  padding-right: 4rem;
-  padding-left: 4rem;
+  padding-right: 0.5rem;
+  padding-left: 2rem;
 }
 
 /* MEDIA QUERY CHANGES */
