--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -8,6 +8,16 @@
   flex-direction: row;
   align-items: center;
 }
+@mixin flex-col-rev-center {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+}
+@mixin flex-row-rev-center {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+}
 
 /*@mixin media-query-mobile {
   @media screen and (max-width: 480px);
