--- a/scss/_culturesec.scss
+++ b/scss/_culturesec.scss
@@ -15,7 +15,7 @@
 
 /* CULTURE LABEL */
 .culture-label {
-  padding-left: 5rem;
+  padding-left: 7.5rem;
   padding-right: 5rem;
   font-size: 9rem;
   width: 20%;
@@ -25,7 +25,10 @@
 .culture-image-parent {
   width: 60rem;
   height: 40rem;
-  padding: 2rem 2rem 2rem 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
   @include flex-row-center;
