--- a/scss/_culturesec.scss
+++ b/scss/_culturesec.scss
@@ -4,19 +4,19 @@
 .culture-container {
   padding-left: 1rem;
   @include flex-row-center;
+  justify-content: space-evenly;
   background-color: $primary-color-dark;
   color: $primary-color-text;
   border-top: 0.1rem $accent-color-mix solid;
   width: 100%;
   height: auto;
   padding-bottom: 8rem;
-  padding-top: 12rem;
+  padding-top: 9rem;
 }
 
 /* CULTURE LABEL */
 .culture-label {
-  padding-left: 7.5rem;
-  padding-right: 5rem;
+  padding-left: 2rem;
   font-size: 9rem;
   width: 20%;
 }
@@ -27,8 +27,6 @@
   height: 40rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  padding-right: 1rem;
-  padding-left: 1rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
   @include flex-row-center;
@@ -85,16 +83,16 @@
 /* TEXT ON RIGHT */
 .culture-text {
   width: 40%;
+  padding-right: 2rem;
 }
 
 .culture-text p {
   font-family: $small-font;
-  font-size: 2rem;
   text-align: center;
+  font-size: 1.8rem;
+  line-height: 3rem;
   padding-top: 3rem;
   padding-bottom: 3rem;
-  padding-right: 2rem;
-  padding-left: 4rem;
 }
 
 /* MEDIA QUERY CHANGES */
