--- a/scss/main.css
+++ b/scss/main.css
@@ -423,19 +423,21 @@ a:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   background-color: #000000;
   color: #fff;
   border-top: 0.1rem #00ffdd solid;
   width: 100%;
   height: auto;
   padding-bottom: 8rem;
-  padding-top: 12rem;
+  padding-top: 9rem;
 }
 
 /* CULTURE LABEL */
 .culture-label {
-  padding-left: 7.5rem;
-  padding-right: 5rem;
+  padding-left: 2rem;
   font-size: 9rem;
   width: 20%;
 }
@@ -446,8 +448,6 @@ a:focus {
   height: 40rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  padding-right: 1rem;
-  padding-left: 1rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
   display: -webkit-box;
@@ -548,16 +548,16 @@ a:focus {
 /* TEXT ON RIGHT */
 .culture-text {
   width: 40%;
+  padding-right: 2rem;
 }
 
 .culture-text p {
   font-family: "Noto Sans TC", sans-serif;
-  font-size: 2rem;
   text-align: center;
+  font-size: 1.8rem;
+  line-height: 3rem;
   padding-top: 3rem;
   padding-bottom: 3rem;
-  padding-right: 2rem;
-  padding-left: 4rem;
 }
 
 /* MEDIA QUERY CHANGES */
@@ -650,13 +650,12 @@ a:focus {
   width: 100%;
   height: auto;
   padding-bottom: 8rem;
-  padding-top: 12rem;
+  padding-top: 9rem;
 }
 
 /* ATTRACTIONS LABEL */
 .attractions-label {
-  padding-left: 2rem;
-  padding-right: 5rem;
+  padding-right: 2rem;
   font-size: 9rem;
   width: 25%;
 }
@@ -664,118 +663,67 @@ a:focus {
 /* IMAGES */
 .attractions-image-parent {
   width: 60rem;
-  height: 40rem;
-  padding: 2rem 2rem 2rem 2rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  height: 60rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  font-size: 5rem;
 }
 
-.attractions-images {
-  margin: 3rem;
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 45rem;
-  height: 38rem;
-  overflow: hidden;
-}
-
-.attractions-images img {
-  position: absolute;
-  -webkit-animation: attractions-images 28s infinite;
-          animation: attractions-images 28s infinite;
-  opacity: 0;
+.empire {
+  background-image: url("./img/empire-attractions.jpg");
+  background-position: center;
   width: 100%;
-  height: auto;
+  height: 25%;
+  position: relative;
 }
 
-@-webkit-keyframes attractions-images {
-  25% {
-    opacity: 1;
-  }
-  40% {
-    opacity: 0;
-  }
+.liberty {
+  background-image: url("./img/liberty-attractions.jpg");
+  background-position: center;
+  width: 100%;
+  height: 25%;
+  position: relative;
 }
 
-@keyframes attractions-images {
-  25% {
-    opacity: 1;
-  }
-  40% {
-    opacity: 0;
-  }
+.times {
+  background-image: url("./img/times-square-attractions.jpg");
+  background-position: center;
+  width: 100%;
+  height: 25%;
+  position: relative;
 }
 
-.attractions-images img:nth-child(7) {
-  -webkit-animation-delay: 24s;
-          animation-delay: 24s;
-}
-
-.attractions-images img:nth-child(6) {
-  -webkit-animation-delay: 20s;
-          animation-delay: 20s;
-}
-
-.attractions-images img:nth-child(5) {
-  -webkit-animation-delay: 16s;
-          animation-delay: 16s;
-}
-
-.attractions-images img:nth-child(4) {
-  -webkit-animation-delay: 12s;
-          animation-delay: 12s;
-}
-
-.attractions-images img:nth-child(3) {
-  -webkit-animation-delay: 8s;
-          animation-delay: 8s;
-}
-
-.attractions-images img:nth-child(2) {
-  -webkit-animation-delay: 4s;
-          animation-delay: 4s;
-}
-
-.attractions-images img:nth-child(1) {
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
+.radiocity {
+  background-image: url("./img/radiocity-attractions.jpg");
+  background-position: center;
+  width: 100%;
+  height: 25%;
+  position: relative;
 }
 
 /* TEXT ON RIGHT */
 .attractions-text {
   width: 40%;
+  padding-left: 2rem;
 }
 
 .attractions-text p {
   font-family: "Noto Sans TC", sans-serif;
-  font-size: 2rem;
   text-align: center;
+  font-size: 1.8rem;
+  line-height: 3rem;
   padding-top: 3rem;
   padding-bottom: 3rem;
-  padding-right: 2rem;
-  padding-left: 1rem;
 }
 
 /* MEDIA QUERY CHANGES */
