--- a/scss/_attractions.scss
+++ b/scss/_attractions.scss
@@ -2,8 +2,10 @@
 @import "_mixins";
 
 .attractions-container {
+  padding-right: 1rem;
   @include flex-row-rev-center;
   background-color: $primary-color-dark;
+  justify-content: space-around;
   color: $primary-color-text;
   border-top: 0.1rem $accent-color-mix solid;
   width: 100%;
@@ -14,53 +16,74 @@
 
 /* ATTRACTIONS LABEL */
 .attractions-label {
-  padding-right: 2rem;
+  padding-left: 8rem;
   font-size: 9rem;
   width: 25%;
 }
 
 /* IMAGES */
 .attractions-image-parent {
-  width: 60rem;
+  width: 50rem;
   height: 60rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
+  padding-right: 10rem;
   @include flex-col-center;
   font-size: 5rem;
 }
-.empire {
-  background-image: url("./img/empire-attractions.jpg");
+.attraction {
   background-position: center;
-  width: 100%;
-  height: 25%;
+  display: flex;
+  align-items: center;
+  width: 50rem;
+  height: 15rem;
   position: relative;
 }
+.attraction h {
+  font-size: 3.25rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  background: black;
+  transition: all 0.2s ease;
+}
+
+.empirestate {
+  background-image: url("../img/empire-attractions.jpg");
+  transition: all 0.2s ease;
+}
+.empirestate:hover {
+  height: 100rem;
+}
+
 .liberty {
-  background-image: url("./img/liberty-attractions.jpg");
-  background-position: center;
-  width: 100%;
-  height: 25%;
-  position: relative;
+  background-image: url("../img/liberty-attractions.jpg");
+  transition: all 0.2s ease;
 }
+.liberty:hover {
+  height: 100rem;
+}
+
 .times {
-  background-image: url("./img/times-square-attractions.jpg");
-  background-position: center;
-  width: 100%;
-  height: 25%;
-  position: relative;
+  background-image: url("../img/times-square-attractions.jpg");
+  transition: all 0.2s ease;
 }
+.times:hover {
+  height: 100rem;
+}
+
 .radiocity {
-  background-image: url("./img/radiocity-attractions.jpg");
-  background-position: center;
-  width: 100%;
-  height: 25%;
-  position: relative;
+  background-image: url("../img/radiocity-attractions.jpg");
+  transition: all 0.2s ease;
+}
+.radiocity:hover {
+  height: 100rem;
 }
 
 /* TEXT ON RIGHT */
 .attractions-text {
   width: 40%;
-  padding-left: 2rem;
+  padding-right: 11rem;
+  padding-left: 6rem;
 }
 
 .attractions-text p {
@@ -75,22 +98,30 @@
 /* MEDIA QUERY CHANGES */
 @media screen and (min-width: $desktop-max) and (max-width: 2000px) {
   .attractions-text {
-    padding-left: 10rem;
+    padding-left: 8rem;
+    padding-right: 6rem;
   }
   .attractions-label {
     font-size: 10rem;
+    padding-left: 2rem;
   }
   .attractions-text p {
     font-size: 2.25rem;
     padding-right: 0rem;
   }
+  .attractions-image-parent {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
+@media screen and (min-width: small-window-max) and (max-width: desktop-max) {
+  .attractions-label {
+    padding-left: 2rem;
+  }
 }
 
 @media screen and (max-width: $small-window-max) {
-  .attractions-images {
-    //width: 35rem;
-    //height: 30rem;
-  }
   .attractions-container {
     @include flex-col-center;
     justify-content: space-between;
@@ -105,10 +136,7 @@
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
   }
-  .attractions-images {
-    width: 40rem;
-    height: 35rem;
-  }
+
   .attractions-text {
     width: 100%;
     padding-left: 1rem;
