--- a/scss/main.css
+++ b/scss/main.css
@@ -593,6 +593,7 @@ a:focus {
   .culture-label {
     padding-top: 2rem;
     width: auto;
+    padding-left: 0rem;
   }
   .culture-image-parent {
     margin-top: 0.5rem;
@@ -612,6 +613,16 @@ a:focus {
     padding-right: 2rem;
     padding-left: 2rem;
     padding-top: 1rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .culture-label {
+    font-size: 7rem;
+  }
+  .culture-text p {
+    font-size: 1.4rem;
+    text-align: left;
   }
 }
 
@@ -787,7 +798,7 @@ a:focus {
   }
 }
 
-@media screen and (max-width: 1150px) {
+@media screen and (min-width: 481px) and (max-width: 1150px) {
   .attractions-container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -802,6 +813,7 @@ a:focus {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    padding-right: 0rem;
   }
   .attractions-label {
     padding-top: 2rem;
@@ -812,17 +824,91 @@ a:focus {
   .attractions-image-parent {
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
+    font-size: 2rem;
+    padding-right: 0rem;
+    padding-bottom: 0rem;
   }
   .attractions-text {
     width: 100%;
     padding-left: 1rem;
     padding-right: 1rem;
-    padding-top: 1rem;
+    padding-bottom: 5rem;
   }
   .attractions-text p {
     padding-right: 2rem;
     padding-left: 2rem;
     padding-top: 1rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .attractions-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding-right: 0rem;
+  }
+  .attractions-label {
+    padding-top: 2rem;
+    padding-right: 0;
+    padding-left: 0;
+    width: auto;
+    font-size: 7rem;
+  }
+  .attractions-image-parent {
+    margin-top: 0.5rem;
+    font-size: 2rem;
+    padding-right: 0rem;
+    padding-bottom: 2rem;
+  }
+  .attractions-text {
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-bottom: 5rem;
+  }
+  .attractions-text p {
+    padding-right: 2rem;
+    padding-left: 2rem;
+    padding-top: 1rem;
+    font-size: 1.4rem;
+    text-align: left;
+  }
+  .attraction {
+    width: 60%;
+    height: 15rem;
+  }
+  .attraction h {
+    display: none;
+  }
+  .attraction:hover {
+    height: 15rem;
+  }
+  .empirestate {
+    background-image: url("../img/empire-mobile.jpg");
+    background-size: cover;
+  }
+  .liberty {
+    background-image: url("../img/liberty-mobile.jpg");
+    background-size: cover;
+  }
+  .times {
+    background-image: url("../img/times-square-mobile.jpg");
+    background-size: cover;
+  }
+  .radiocity {
+    background-image: url("../img/radiocity-mobile.jpg");
+    background-size: cover;
   }
 }
 
