started restaurants and images

--- a/scss/_attractions.scss
+++ b/scss/_attractions.scss
@@ -185,6 +185,7 @@
     padding-top: 1rem;
     font-size: 1.4rem;
     text-align: left;
+    line-height: 2.5rem;
   }
   .attraction {
     width: 60%;
